some css fixes that stop the coffee from overlapping points

--- a/static/accolades.css
+++ b/static/accolades.css
@@ -76,6 +76,7 @@
     justify-content: space-between;
     width: 100%;
     gap: 20px;
+    margin-bottom: 80px
 }
 
 .card {
